[gd_scene load_steps=3 format=3 uid="uid://lhewq7q1nky7"]

[ext_resource type="Script" path="res://prog_122i.gd" id="1_leof0"]
[ext_resource type="Theme" uid="uid://os4yjvatm7cf" path="res://Button.tres" id="2_lyy2r"]

[node name="Prog122I" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_leof0")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 518.0

[node name="Calc" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 546.0
offset_right = 210.0
offset_bottom = 644.0
theme = ExtResource("2_lyy2r")
text = "Calculate"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 482.0
offset_top = 548.0
offset_right = 690.0
offset_bottom = 646.0
theme = ExtResource("2_lyy2r")
text = "Clear"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 946.0
offset_top = 544.0
offset_right = 1154.0
offset_bottom = 642.0
theme = ExtResource("2_lyy2r")
text = "Quit"

[connection signal="pressed" from="Calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
